--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "perbase_lib"
+path = "src/lib/mod.rs"
+
+[[bin]]
+name = "perbase"
+path = "src/main.rs"
+
 [dependencies]
 rust-htslib = "0.32.0"
 log = "0.4.11"
@@ -16,4 +24,8 @@ csv = "1.1.3"
 rayon = "1.4.0"
 smartstring = {version = "0.2.4", features = ["serde"]}
 serde = {version = "1.0.116", features = ["derive"]}
+num_cpus = "1.13.0"
+grep-cli = "0.1.5"
+termcolor = "1.1.0"
+bam = "0.1.1"
 
