--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,5 @@ serde = {version = "1.0.116", features = ["derive"]}
 num_cpus = "1.13.0"
 grep-cli = "0.1.5"
 termcolor = "1.1.0"
-bam = "0.1.1"
+tempfile = "3.1.0"
 
