--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,7 @@ name = "perbase"
 version = "0.1.0"
 authors = ["Seth Stadick <sstadick@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
 
 [lib]
 name = "perbase_lib"
