--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,7 @@ serde = {version = "1.0.116", features = ["derive"]}
 num_cpus = "1.13.0"
 grep-cli = "0.1.5"
 termcolor = "1.1.0"
-tempfile = "3.1.0"
+
+[dev-dependencies]
+rstest = "0.6.4"
 
