--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "perbase"
-version = "0.1.0"
+version = "0.2.1"
 authors = ["Seth Stadick <sstadick@gmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -28,6 +28,8 @@ grep-cli = "0.1.5"
 termcolor = "1.1.0"
 crossbeam = "0.7.3"
 crossbeam-channel = "0.4.4"
+bio = "0.32.0"
+rust-lapper = "0.4.4"
 
 [dev-dependencies]
 rstest = "0.6.4"
