--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "perbase"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Seth Stadick <sstadick@gmail.com>"]
 edition = "2018"
 license = "MIT"
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
 
 [lib]
 name = "perbase_lib"
