--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ crossbeam = "0.7.3"
 crossbeam-channel = "0.4.4"
 bio = "0.32.0"
 rust-lapper = "0.4.4"
+itertools = "0.9.0"
 
 [dev-dependencies]
 rstest = "0.6.4"
