--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "perbase"
-version = "0.3.6"
+version = "0.3.5"
 authors = ["Seth Stadick <sstadick@gmail.com>"]
 edition = "2018"
 license = "MIT"
+repository = "https://github.com/sstadick/perbase"
+description = "Fast and correct perbase BAM/CRAM analysis."
+documentation = "https://docs.rs/perbase"
+readme = "README.md"
+categories = ["science"]
+keywords = ["depth", "coverage", "bioinformatics", "genomic"]
 
 [profile.release]
 lto = "fat"
