--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ crossbeam-channel = "0.4.4"
 bio = "0.32.0"
 rust-lapper = "0.5.0"
 itertools = "0.9.0"
+structopt = "0.3.18"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 rstest = "0.6.4"
