--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ rust-lapper = "0.5.0"
 itertools = "0.9.0"
 structopt = "0.3.18"
 lazy_static = "1.4.0"
+lru_time_cache = "0.11.1"
 
 [dev-dependencies]
 rstest = "0.6.4"
