--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,9 @@ jobs:
           # - os: windows-latest
           #   artifact_name: perbase.exe
           #   asset_name: perbase-windows-amd64
-          - os: macos-latest
-            artifact_name: perbase
-            asset_name: perbase-macos-amd64
+          # - os: macos-latest
+          #   artifact_name: perbase
+          #   asset_name: perbase-macos-amd64
 
     steps:
       - uses: actions/checkout@v2
