--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Run tests
-        run: cargo test --verbose -- --ignore
+        run: cargo test --verbose -- --ignored
