--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,28 +24,29 @@ name = "perbase"
 path = "src/main.rs"
 
 [dependencies]
-rust-htslib = "0.35.2"
-log = "0.4.11"
-env_logger = "0.7.1"
 anyhow = "1.0.32"
-csv = "1.1.3"
-rayon = "1.4.0"
-smartstring = {version = "0.2.4", features = ["serde"]}
-serde = {version = "1.0.116", features = ["derive"]}
-num_cpus = "1.13.0"
-grep-cli = "0.1.5"
-termcolor = "1.1.0"
+bio = "0.32.0"
 crossbeam = "0.7.3"
 crossbeam-channel = "0.4.4"
-bio = "0.32.0"
-rust-lapper = "0.5.0"
+csv = "1.1.3"
+env_logger = "0.7.1"
+grep-cli = "0.1.5"
 itertools = "0.9.0"
-structopt = "0.3.18"
 lazy_static = "1.4.0"
+log = "0.4.11"
 lru_time_cache = "0.11.1"
+noodles = { git = "https://github.com/zaeleus/noodles.git", features = ["bgzf"], rev = "f8a0b7e16a7d12497a35349bff05bd077143b898" }
+num_cpus = "1.13.0"
+rayon = "1.4.0"
+rust-htslib = "0.35.2"
+rust-lapper = "0.5.0"
+serde = { version = "1.0.116", features = ["derive"] }
+smartstring = { version = "0.2.4", features = ["serde"] }
+structopt = "0.3.18"
+termcolor = "1.1.0"
 
 [dev-dependencies]
+proptest = "0.10.1"
 rstest = "0.6.4"
 tempfile = "3.1.0"
-proptest = "0.10.1"
 
