--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ categories = ["science"]
 keywords = ["depth", "coverage", "bioinformatics", "genomic"]
 
 [profile.release]
-lto = "fat"
-codegen-units = 1
+#lto = "fat"
+#codegen-units = 1
 
 [lib]
 name = "perbase_lib"
@@ -24,11 +24,11 @@ name = "perbase"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "1.0.32"
+anyhow = "1.0.41"
 bio = "0.32.0"
 crossbeam = "0.7.3"
 crossbeam-channel = "0.4.4"
-csv = "1.1.3"
+csv = "1.1.6"
 env_logger = "0.7.1"
 grep-cli = "0.1.5"
 itertools = "0.9.0"
