--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "perbase"
-version = "0.7.0"
+version = "0.6.4"
 authors = ["Seth Stadick <sstadick@gmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -35,7 +35,7 @@ itertools = "0.9.0"
 lazy_static = "1.4.0"
 log = "0.4.11"
 lru_time_cache = "0.11.1"
-noodles = { git = "https://github.com/zaeleus/noodles.git", features = ["bgzf"], rev = "c41006c9e7945f99555157555737cd93094cf69f" }
+noodles = { version = "0.1.0", git = "https://github.com/zaeleus/noodles.git", features = ["bgzf"], rev = "c41006c9e7945f99555157555737cd93094cf69f" }
 num_cpus = "1.13.0"
 rayon = "1.4.0"
 rust-htslib = "0.35.2"
