--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,28 +25,29 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.41"
-bio = "0.32.0"
-crossbeam = "0.7.3"
-crossbeam-channel = "0.4.4"
+bio = "0.39.0"
+crossbeam = "0.8.1"
+crossbeam-channel = "0.5.1"
 csv = "1.1.6"
-env_logger = "0.7.1"
+env_logger = "0.9.0"
 grep-cli = "0.1.5"
-itertools = "0.9.0"
+gzp = "0.9.2"
+itertools = "0.10.1"
 lazy_static = "1.4.0"
 log = "0.4.11"
 lru_time_cache = "0.11.1"
-noodles = { version = "0.1.0", git = "https://github.com/zaeleus/noodles.git", features = ["bgzf"] }
 num_cpus = "1.13.0"
 rayon = "1.4.0"
-rust-htslib = "0.36"
-rust-lapper = "0.5.0"
+#TODO add  features = ["libdeflate"] when https://github.com/rust-bio/rust-htslib/pull/341 is merged
+rust-htslib = {version = "0.38"}
+rust-lapper = "1.0.0"
 serde = { version = "1.0.116", features = ["derive"] }
 smartstring = { version = "0.2.4", features = ["serde"] }
 structopt = "0.3.18"
 termcolor = "1.1.0"
 
 [dev-dependencies]
-proptest = "0.10.1"
-rstest = "0.6.4"
+proptest = "1.0.0"
+rstest = "0.11.0"
 tempfile = "3.1.0"
 
