--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "perbase"
-version = "0.8.2-alpha.0"
-authors = ["Seth Stadick <sstadick@gmail.com>"]
+version = "0.9.0"
+authors = ["Seth Stadick <sstadick@gmail.com>", "Schaudge King <yuanshenran@gmail.com>"]
 edition = "2018"
 license = "MIT"
-repository = "https://github.com/sstadick/perbase"
+repository = "https://github.com/Schaudge/perbase"
 description = "Fast and correct perbase BAM/CRAM analysis."
-documentation = "https://docs.rs/perbase"
 readme = "README.md"
 categories = ["science"]
 keywords = ["depth", "coverage", "bioinformatics", "genomic"]
