--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "perbase"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["Seth Stadick <sstadick@gmail.com>", "Schaudge King <yuanshenran@gmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -23,27 +23,26 @@ name = "perbase"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "1.0.41"
-bio = "0.39.0"
+anyhow = "1.0.57"
+bio = "0.41.0"
 crossbeam = "0.8.1"
-crossbeam-channel = "0.5.1"
+crossbeam-channel = "0.5.4"
 csv = "1.1.6"
 env_logger = "0.9.0"
 grep-cli = "0.1.5"
-gzp = "0.9.2"
-itertools = "0.10.1"
+gzp = "0.9.5"
+itertools = "0.10.3"
 lazy_static = "1.4.0"
-log = "0.4.11"
-lru_time_cache = "0.11.1"
-num_cpus = "1.13.0"
-rayon = "1.4.0"
-#TODO add  features = ["libdeflate"] when https://github.com/rust-bio/rust-htslib/pull/341 is merged
-rust-htslib = {version = "0.38"}
+log = "0.4.16"
+lru_time_cache = "0.11.11"
+num_cpus = "1.13.1"
+rayon = "1.5.1"
+rust-htslib = { version = "0.38.2", features = ["libdeflate"] }
 rust-lapper = "1.0.0"
-serde = { version = "1.0.116", features = ["derive"] }
-smartstring = { version = "0.2.4", features = ["serde"] }
-structopt = "0.3.18"
-termcolor = "1.1.0"
+serde = { version = "1.0.136", features = ["derive"] }
+smartstring = { version = "1.0.1", features = ["serde"] }
+structopt = "0.3.26"
+termcolor = "1.1.3"
 
 [dev-dependencies]
 proptest = "1.0.0"
