--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
           - os: ubuntu-latest
             artifact_name: perbase
             asset_name: perbase-linux-amd64
+          - os: ubuntu-18.04
+            artifact_name: perbase-ubuntu_18_04
+            asset_name: perbase-linux-amd64-ubuntu_18_04
           - os: macos-latest
             artifact_name: perbase
             asset_name: perbase-macos-amd64
