--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
             artifact_name: perbase
             asset_name: perbase-linux-amd64
           - os: ubuntu-18.04
-            artifact_name: perbase-ubuntu_18_04
+            artifact_name: perbase
             asset_name: perbase-linux-amd64-ubuntu_18_04
           - os: macos-latest
             artifact_name: perbase
