--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "perbase"
 version = "0.10.3"
 authors = ["Seth Stadick <sstadick@gmail.com>"]
-edition = "2018"
+edition = "2024"
 license = "MIT"
 repository = "https://github.com/sstadick/perbase"
 description = "Fast and correct perbase BAM/CRAM analysis."
@@ -39,15 +39,15 @@ lru_time_cache = "0.11.1"
 num_cpus = "1.13.0"
 rayon = "1.4.0"
 #TODO add  features = ["libdeflate"] when https://github.com/rust-bio/rust-htslib/pull/341 is merged
-rust-htslib = {version = "0.39"}
+rust-htslib = { version = "0.39" }
 rust-lapper = "1.0"
 serde = { version = "1.0.116", features = ["derive"] }
 smartstring = { version = "1.0.1", features = ["serde"] }
 structopt = "0.3.18"
+strum = { version = "0.27.1", features = ["derive"] }
 termcolor = "1.1.0"
 
 [dev-dependencies]
 proptest = "1.0.0"
 rstest = "0.11.0"
 tempfile = "3.1.0"
-
