--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.41"
 bio = "0.41"
+bstr = "1.12.0"
 crossbeam = "0.8"
 crossbeam-channel = "0.5"
 csv = "1.1.6"
